<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="cat.dev.fitness.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/header_name"
                android:imeActionId="@+id/email"
                android:imeActionLabel="@string/header_email"
                android:imeOptions="actionUnspecified"
                android:inputType="text"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/header_email"
                android:imeActionId="@+id/age"
                android:imeActionLabel="@string/header_age"
                android:imeOptions="actionUnspecified"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/header_age"
                android:imeActionId="@+id/weight"
                android:imeActionLabel="@string/header_weight"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<EditText-->
                <!--android:id="@+id/height"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:hint="@string/header_height"-->
                <!--android:imeActionId="@+id/weight"-->
                <!--android:imeActionLabel="@string/header_weight"-->
                <!--android:imeOptions="actionUnspecified"-->
                <!--android:inputType="numberDecimal"-->
                <!--android:maxLines="1" />-->

        <!--</android.support.design.widget.TextInputLayout>-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/header_weight"
                android:imeActionId="@+id/sex"
                android:imeActionLabel="@string/header_sex"
                android:imeOptions="actionUnspecified"
                android:inputType="numberDecimal"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:entries="@array/sex" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="40dp"
            android:text="@string/header_submit" />

    </LinearLayout>

</ScrollView>
